# ausus-c-cpp

./: .gitignore  README.md
polimi/linker_scripts/: 20200629.ld
polimi/scheduler/: Senza nome 1.ods
polimi/source/: CMakeLists.txt  TimerRegister.cpp  main.cpp
polimi/source/kernel/: Processes.c  Processes.h
polimi/source/peripherals/: Aes.cpp  Aes.h  Futurama.cpp  Futurama.h  TimerRegister.h
polimi/source/threads/: SyncPoint.h
